[package]
name = "znn_sdk_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek-bip32 = "0.2.0"
futures = "0.3.21"
hex = "0.4.3"
sha3 = "0.10.1"
tiny-bip39 = "0.8.2"
async-std = { version = "1", features = ["attributes", "tokio1"] }
serde = "1.0.136"
serde_json = "1.0.79"
jsonrpsee = "0.11.0"
jsonrpsee-core = "0.11.0"
jsonrpsee-ws-client = "0.11.0"
