[package]
name = "znn_sdk_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek-bip32 = "0.2.0"
hex = "0.4.3"
sha3 = "0.10.1"
tiny-bip39 = "0.8.2"
serde = "1.0.136"
serde_json = "1.0.79"
jsonrpsee = "0.11.0"
jsonrpsee-core = "0.11.0"
jsonrpsee-ws-client = "0.11.0"
jsonrpsee-types = "0.11.0"
anyhow = "1.0.57"
bech32 = "0.8.1"
rust-argon2 = "1.0.0"
aes-gcm = { version = "0.9.4", features = ["std"] }
rand = "0.8.5"
thiserror = "1.0.31"
ed25519-dalek = "1.0.1"

[dev-dependencies]
tokio = "1.17.0"
pretty_assertions = "1.2.1"
